using UnityEngine;

public class GravityMove : IMovement
{
    void Update()
    {
        
    }

    public void Move()
    {
        
    }
}
